// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component should concat classname in props with Bulma classname 1`] = `
<div
  className="notification other-class this-is-a-test"
>
  <p>
    Default
  </p>
</div>
`;

exports[`Notification component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Notification component should have notification classname 1`] = `
<div
  className="notification"
>
  <img
    alt="placeholder"
    src="http://bulma.io/images/placeholders/128x128.png"
  />
</div>
`;

exports[`Notification component should render as Section 1`] = `
<section
  className="notification"
>
  <p>
    Default
  </p>
</section>
`;

exports[`Notification component should use color black 1`] = `
<div
  className="notification is-black"
>
  <p>
    Default 
    black
  </p>
</div>
`;

exports[`Notification component should use color danger 1`] = `
<div
  className="notification is-danger"
>
  <p>
    Default 
    danger
  </p>
</div>
`;

exports[`Notification component should use color dark 1`] = `
<div
  className="notification is-dark"
>
  <p>
    Default 
    dark
  </p>
</div>
`;

exports[`Notification component should use color info 1`] = `
<div
  className="notification is-info"
>
  <p>
    Default 
    info
  </p>
</div>
`;

exports[`Notification component should use color light 1`] = `
<div
  className="notification is-light"
>
  <p>
    Default 
    light
  </p>
</div>
`;

exports[`Notification component should use color link 1`] = `
<div
  className="notification is-link"
>
  <p>
    Default 
    link
  </p>
</div>
`;

exports[`Notification component should use color primary 1`] = `
<div
  className="notification is-primary"
>
  <p>
    Default 
    primary
  </p>
</div>
`;

exports[`Notification component should use color success 1`] = `
<div
  className="notification is-success"
>
  <p>
    Default 
    success
  </p>
</div>
`;

exports[`Notification component should use color warning 1`] = `
<div
  className="notification is-warning"
>
  <p>
    Default 
    warning
  </p>
</div>
`;

exports[`Notification component should use color white 1`] = `
<div
  className="notification is-white"
>
  <p>
    Default 
    white
  </p>
</div>
`;

exports[`Notification component should use inline styles 1`] = `
<div
  className="notification"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</div>
`;
